Fixes a CSS issue where the DAM CP section would not use 100% height on small screens

--- a/src/assetbundles/cp/resources/cpsection.css
+++ b/src/assetbundles/cp/resources/cpsection.css
@@ -2,8 +2,15 @@
     display: none !important;
 }
 
+#main-content {
+    position: relative;
+}
+
 #content-container #content {
     padding: 0 !important;
+    width: 100% !important;
     height: 100% !important;
     overflow: hidden !important;
+    position: absolute;
+    top: 0; left: 0;
 }
